--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -73,7 +73,7 @@
 }
 
 body {
-    background-color: rgba(0, 0, 0, .03);
+    background-color: rgba(0, 0, 0, 0.03);
     /* padding-top: 160px; */
 }
 
