--- a/views/layouts/backend.handlebars
+++ b/views/layouts/backend.handlebars
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-black topbar">
-        <img src="./assets/img/tcwa-logo.png" style="width: 160px;" class='m-2'>
+        <img src="../assets/img/tcwa-logo.png" style="width: 160px;" class='m-2'>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,8 @@
 
     {{{ body }}}
 
-    <script
-              src="https://code.jquery.com/jquery-3.3.1.min.js"
-              integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-              crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -56,6 +54,22 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="/assets/js/backend.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // auto-scrolls to request element
+            if ($('#request-block-' + '{{{requestId}}}').length) {
+                $("#collapse-" + '{{{requestId}}}').collapse("show");
+                $('html, body').animate(
+                    {
+                        scrollTop: $('#request-block-' + '{{{requestId}}}').offset().top
+                    },
+                    800
+                );
+            }
+        });
+    </script>
+
 </body>
 
 </html>
