--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        <div class="card request-block" data-status="{{this.status}}">
+        <div id="request-block-{{this.id}}" class="card request-block" data-status="{{this.status}}">
             <div id="request-header" class="card-header request-header" data-target="#collapse-{{this.id}}">
                 <div class="row no-gutters">
                     <div class="col-6 col-lg-1">
@@ -159,7 +159,7 @@
                                         <li><button class="btn btn-success complete-btn" data-target="{{this.id}}"
                                                 data-id="4">Complete</button></li>
                                         <li><button class="btn btn-light incomplete-btn" style="display:none;"
-                                                data-target="{{this.id}}" data-id="3">Incomplete</button></li>
+                                                data-target="{{this.id}}" data-id="2">Incomplete</button></li>
                                         <li><button class="btn btn-warning archive-btn" style="display:none;"
                                                 data-target="{{this.id}}" data-id="5">Archive</button></li>
                                         <li><button class="btn btn-secondary cancel-btn" 
