--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        {{!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {{!-- <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -33,7 +33,7 @@
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul> --}}            
-        </div>
+        </div> --}}
     </nav>
 
     {{{ body }}}
