Fixed issue with pushing notes

--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -187,6 +187,6 @@
         </div>
     </div>
     <script type='text/javascript'>
-        originNotes.push({ id: '{{{this.id}}}', note: '{{{this.rawNotes}}}' });
+        originNotes.push({ id: `{{{this.id}}}`, note: `{{{this.rawNotes}}}` });
     </script>
 </div>
