--- a/views/partials/archive-block.handlebars
+++ b/views/partials/archive-block.handlebars
@@ -162,6 +162,6 @@
         </div>
     </div>
     <script type='text/javascript'>
-        originNotes.push({ id: '{{{this.id}}}', note: '{{{this.rawNotes}}}' });
+        originNotes.push({ id: `{{{this.id}}}`, note: `{{{this.rawNotes}}}` });
     </script>
 </div>
