--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        {{!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            {{!-- <ul class="navbar-nav mr-auto">
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -32,8 +32,8 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
-            </ul> --}}            
-        </div> --}}
+            </ul>        
+        </div> -->
     </nav>
 
     {{{ body }}}
