--- a/views/layouts/backend.handlebars
+++ b/views/layouts/backend.handlebars
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-black topbar">
-        <img src="assets/img/tcwa-logo.png" style="width: 160px;" class='m-2'>
+        <img src="/assets/img/tcwa-logo.png" style="width: 160px;" class='m-2'>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,18 +26,18 @@
                     <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="newrequest">New Request</a>
+                    <a class="nav-link" href="/newrequest">New Request</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="archive">Archived Requests</a>
+                    <a class="nav-link" href="/archive">Archived Requests</a>
                 </li>
                 {{#if admin}}
                 <li class="nav-item">
-                    <a class="nav-link" href="users">Users</a>
+                    <a class="nav-link" href="/users">Users</a>
                 </li>
                 {{/if}}
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
