--- a/views/layouts/newrequest.handlebars
+++ b/views/layouts/newrequest.handlebars
@@ -23,21 +23,21 @@
         <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Home </a>
+                    <a class="nav-link" href="/dashboard">Home </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="newrequest">New Request <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/newrequest">New Request <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="archive">Archived Requests</a>
+                    <a class="nav-link" href="/archive">Archived Requests</a>
                 </li>
                 {{#if admin}}
                 <li class="nav-item">
-                    <a class="nav-link" href="users">Users</a>
+                    <a class="nav-link" href="/users">Users</a>
                 </li>
                 {{/if}}
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
