--- a/views/layouts/users.handlebars
+++ b/views/layouts/users.handlebars
@@ -24,21 +24,21 @@
         <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Home</a>
+                    <a class="nav-link" href="/dashboard">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="newrequest">New Request</a>
+                    <a class="nav-link" href="/newrequest">New Request</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="archive">Archived Requests</a>
+                    <a class="nav-link" href="/archive">Archived Requests</a>
                 </li>
                 {{#if admin}}
                 <li class="nav-item active">
-                    <a class="nav-link" href="users">Users <span class="sr-only">(current)</a>
+                    <a class="nav-link" href="/users">Users <span class="sr-only">(current)</a>
                 </li>
                 {{/if}}
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
